feature : route and controller delete and patch for entry then   docs swagger
