# src/controllers/EntryController/EntryController.ts
@@ -1,9 +1,10 @@
-import BaseController from "../BaseController.js"
-import { prisma } from "../../../prisma/index.js"
-import { Request, Response } from "express"
 import { Entry } from "@prisma/client"
+import { Request, Response } from "express"
+import { prisma } from "../../../prisma/index.js"
 import { JwtRequest } from "../../middlewares/authMiddleware.js"
 import { entrySchema } from "../../schemas/entry.schema.js"
+
+import BaseController from "../BaseController.js"
 
 export default class EntryController extends BaseController<Entry, "entry_id"> {
   constructor() {
@@ -92,6 +93,7 @@ export default class EntryController extends BaseController<Entry, "entry_id"> {
       return res.status(200).json({ memberEntries, entries })
     }
   }
+
   async postEntry(req: JwtRequest, res: Response) {
     const userId = req.user!.id
     const { challengeId } = req.params
@@ -102,5 +104,57 @@ export default class EntryController extends BaseController<Entry, "entry_id"> {
       user_id: userId,
       challenge_id: Number(challengeId),
     }).then((entry) => res.status(201).json({ entry }))
+  }
+
+  async updateEntry(req: JwtRequest, res: Response) {
+    if (req.user) {
+      const { entryId } = req.params
+      const { id: userId } = req.user
+      const entryToUpdate = await prisma.entry.findUnique({
+        where: {
+          entry_id: Number(entryId),
+          user_id: userId,
+        },
+      })
+      if (!entryToUpdate) {
+        return res
+          .status(403)
+          .json({ message: "Non autorisé à modifier cette participation" })
+      }
+      const validateEntry = entrySchema.safeParse(req.body)
+      if (!validateEntry.success) {
+        return res.status(400).json({
+          message: "Données invalides",
+          errors: validateEntry.error,
+        })
+      }
+      const { title, video_url, challenge_id, user_id } = validateEntry.data
+      const response = await this.update(Number(entryId), {
+        title,
+        video_url,
+        challenge_id,
+        user_id,
+      })
+      return res.json({ response })
+    }
+  }
+  async deleteEntry(req: JwtRequest, res: Response) {
+    if (req.user) {
+      const { entryId } = req.params
+      const { id } = req.user
+      const entryToDelete = await prisma.entry.findUnique({
+        where: {
+          entry_id: Number(entryId),
+          user_id: id,
+        },
+      })
+      if (!entryToDelete) {
+        return res
+          .status(403)
+          .json({ message: "Non autorisé à supprimer cette participation" })
+      }
+      await this.delete(entryToDelete.entry_id)
+      res.status(200).json({ message: entryToDelete })
+    }
   }
 }
