# src/routes/entry.routes.ts
@@ -1,7 +1,8 @@
 import { Router } from "express"
-import { controllerWrapper as cw } from "../utils/controllerWrapper.js"
 import EntryController from "../controllers/EntryController/EntryController.js"
 import { verifyToken } from "../middlewares/authMiddleware.js"
+import { controllerWrapper as cw } from "../utils/controllerWrapper.js"
+
 const router = Router()
 const entryController = new EntryController()
 
@@ -13,9 +14,23 @@ router.get(
   "/:challengeId",
   cw((req, res) => entryController.findAllEntries(req, res))
 )
+
 router.post(
   "/:challengeId",
   verifyToken({ ownerRequired: true }),
   cw((req, res) => entryController.postEntry(req, res))
 )
+
+router.patch(
+  "/:entryId",
+  verifyToken({ ownerRequired: true }),
+  cw((req, res) => entryController.updateEntry(req, res))
+)
+
+router.delete(
+  "/:entryId",
+  verifyToken({ ownerRequired: true }),
+  cw((req, res) => entryController.deleteEntry(req, res))
+)
+
 export default router
